--- a/sentinel-statefulset.yaml
+++ b/sentinel-statefulset.yaml
@@ -20,7 +20,7 @@ spec:
         command: [ "sh", "-c" ]
         args:
           - |
-            REDIS_PASSWORD=dHJlbjc5Cg==
+            REDIS_PASSWORD=*********
             nodes=redis-0.redis,redis-1.redis,redis-2.redis
             loop=$(echo $nodes | sed -e "s/,/\n/g")
 
